adding fortify (#704)
* adding fortify

* updating client